--- a/source/_posts/管理/不懂带人就当不好经理-懂激励.md
+++ b/source/_posts/管理/不懂带人就当不好经理-懂激励.md
@@ -4,6 +4,7 @@ date: 2018-11-06 12:46:06
 categories:
 - 管理
 tags:
+- 不懂带人就当不好经理
 ---
 给员工以精神上的满足
 1. 倾听式激励
@@ -23,5 +24,3 @@ tags:
 1. 按照员工喜欢的方式激励他们
 2. 在公司内实施良性竞争
 3. 不要“只让一人独得”的激励方式
-===
-## 参考文献
