--- a/source/_posts/管理/管理学-激励.md
+++ b/source/_posts/管理/管理学-激励.md
@@ -4,7 +4,10 @@ date: 2018-11-06 12:46:06
 categories:
 - 管理
 tags:
+- 管理学
 ---
+
+有效的管理者能够使员工尽最大努力认真工作，了解员工如何受到激励以及为什么会被激励，并且选择最合适的激励方式来满足员工的需求。
 动机指一种过程，它体现了个体为实现目标而付出努力的强度、方向和坚持性。
 
 ## 早期的动机理论
@@ -18,13 +21,23 @@ tags:
 4. 尊重需求：内部尊重因素包括对自尊、自主和成就感的需要，外部尊重因素包括对地位、认可或被关注的需要。
 5. 自我实现需求：人们对自我发展、自我价值实现和自我理想实现的需要；是追求个人能力极限的动力。
 
+管理者运用马斯洛的需求层次理论激励员工为实现自身需求而努力工作。但该理论也指出，一旦员工的某种需求得到实质性的满足，这种需求就不再具有激励作用。因此，需要了解目前处于哪个需求层次，然后重点满足这个层次以及该层次以上的需求。
+
+马斯洛的理论在20世纪六七十年代得到普遍认可，但他的理论缺乏实证研究的支持。
+
 ### 麦格雷戈的X理论和Y理论
 
 1. X理论：代表了一种消极的人性观点，认为员工没有雄心大志，不喜欢工作，只要有可能就会逃避责任，为了保证工作效果必须严格监控
 2. Y理论：代表了一种积极的人性观点，认为员工喜欢工作，他们接受甚至主动寻求工作责任来自我激励和自我指导，把工作视为一种自然而然的活动。
+
+但是，没有证据来证明哪一种理论更有效，也没有办法证明Y理论是激励员工的唯一途径。
+
+黄仁轩在抨击一个项目团队重复犯错的时候说，“你们真的那么烂吗？”，“如果你们确实很烂，那就赶快站起来说你们很烂”。他的话用经典的X理论来解释，意思就是如果你们需要帮助，就赶快说出来。
+
 ### 赫茨伯格的双因素理论
 
 内在因素与工作满意相关，而外在因素与工作不满意相关
+
 |激励因素|保健因素|
 |-|-|
 |成就|监督|
@@ -41,53 +54,135 @@ tags:
 
 赫茨伯格提出了二维连续体的存在：“满意”的对立面是“没有满意”，“不满意”的对立面是“没有不满意”。因此，试图在工作中消除不满意因素的管理者只能给工作场所带来和平，未必能够激励员工。要想真正激励员工努力工作，必须注重激励因素，这些内在因素才是增加员工满意度的依据。
 
+赫茨伯格的理论在20世纪60年代中期到80年代初一直有着广泛的影响，对该理论的批评主要是针对操作程序和方法论方面。
 
 ### 麦克莱兰的三种需要理论
+
 1. 成就需求：达到标准、追求卓越、获得成功的需求。
 2. 权利需求：想要是他人按照自己的指示以某种特定方式行事的需求。
 3. 归属需求：建立友好、亲密的人际关系的愿望。
+
 拥有高成就需求不一定就是好的管理者，因为高成就需求者专注于他们自己的成就，而优秀的管理者强调帮助他人完成目标。
 最优秀的管理者往往拥有较高的权利需求和较低的归属需求。
 
 ## 当代的动机理论
 
 ### 目标设置理论
+
 目标设置理论认为，具体的工作目标会提高工作绩效，困难的目标一旦被员工接受，将会比容易的目标产生更高的工作绩效。
-1. 努力实现某个目标是工作动机的一个主要来源
-2. 如果员工有机会参与目标设置，他们是否会更努力工作？不一定
-3. 如果员工在完成目标的过程中得到必要的反馈，他们会表现更佳。
+
+在你进行一项重大任务或者一次重要的班级项目汇报之前，老师是否鼓励过你“只要尽力而为就行”？这个模糊的说法“尽力而为”是什么意思？老师说过只有在班级项目汇报中得到93分，你这门功课才能得A，你的成绩是否会更高一些？目标设置理论的研究就是关注上述问题。
+
+1. 努力实现某个目标是工作动机的一个主要来源。具体的、富有挑战性的目标是极为有效的激励力量。
+2. 如果员工有机会参与目标设置，他们是否会更努力工作？不一定。
+3. 如果员工在完成目标的过程中得到必要的反馈，他们会表现更佳。因为反馈能够帮助他们认清已做之事和想做之事之间的差别。同时，自我生成的反馈比起来自他人的反馈更具有激励作用。
 
 影响目标-绩效关系的因素
+
 1. 反馈
 2. 个人对目标的承诺
-3. 足够的自我效能
-4. 民族文化
+3. 足够的自我效能。员工认为自己能够完成某项任务的信念。面对困难时，自我效能低的员工会减少努力或者集体放弃，而自我效能高的员工会更加努力来迎接挑战。
+4. 民族文化。在北美国家，文化允许在合理的范围内，下属具有一定的独立性，他们可以自己设定具有挑战性的目标。
+
 工作目标的具体化、挑战性和反馈信息对员工的工作绩效都有显著影响。
+
 ### 强化理论
 
-强化理论认为行为是其结果的函数。强化理论不考虑诸如目标、期望、需求等因素，而只关注个体采取某种行动后产生的结果。
-### 工作设计理论
-1. 工作扩大化
-2. 工作丰富化
+强化理论认为行为是其结果的函数。如果某种结果紧跟在某种行为之后立即出现，并且提高该行为未来重复的可能性，那么他就称为强化物。强化理论不考虑诸如目标、期望、需求等因素，而只关注个体采取某种行动后产生的结果。
 
-工作特征模型
-1. 技能多样性
-2. 任务完整性
-3. 任务重要性
-4. 工作自主性
-5. 工作反馈
+例如，沃尔玛改进了小时工的奖金计划，提供出色客服的员工可以获得奖金奖励。奖金的分配取决商场业绩，而且每季度发放一次，从而使员工更频繁地获得奖励。公司的意图是，在员工完成工作目标是对他们进行奖励，以不断激励他们完成工作目标，从而强化他们的这些行为。
+
+### 工作设计理论
+
+由于管理者想要激励员工努力工作，因为我们需要寻找各种方法来设计具有激励作用的工作。
+
+1. 工作扩大化。横向扩大工作范围。大多数工作扩大化努力仅关注增加工作任务的数量，其效果似乎并不尽人意。有人说，“以前我只有一项讨厌的任务要做，现在我有三项讨厌的工作任务要做了！”。也有研究显示，知识扩大化活动（扩大工作中使用的知识的范围）会对员工产生积极影响。
+2. 工作丰富化。纵向增加工作深度，即员工对于自己工作的控制程度。传统上认为应有管理者完成的某些工作任务现在授权给员工自己来完成。因此，工作丰富化使员工有更多的自由、独立性和责任来完成整项工作。
+
+#### 工作特征模型
+工作特征模型，为管理者设计具有激励作用的工作提供了一种有效框架。确定了五种核心工作维度，他们的相互关系以及他们对员工生产率、动机和满意度的影响。
+
+1. 技能多样性。指一项工作需要从事多种活动从而使员工能够利用不同技能和才干的程度。
+2. 任务完整性。指一项工作需要完成一件完整的、可辨识的工作任务的程度。
+3. 任务重要性。指一项工作对他人生活和工作的实际影响程度。
+4. 工作自主性。指一项工作在安排工作内容、确定工作程序方面实际上给员工多大的自由度、独立权和决定权。
+5. 工作反馈。指员工在完成任务的过程中，可以获得关于自己工作绩效的直接而明确的信息的程度。
+
+
+{% asset_img 工作的特征模型.jpeg 工作的特征模型 %}
+
+#### 工作再设计
+
+1. 合并任务。管理者应该把零碎的任务组合成新的、范围更广的工作模块，以增强技能多样性和任务完整性。
+2. 形成自然的工作单元。管理者应该把工作设计成完整的、有意义的整体，以增强员工对工作的“拥有感”。
+3. 建立客户关系。管理者应当建立员工与客户之间的直接联系，以提高技能多样性和工作自主性，并增加反馈信息。
+4. 纵向扩展工作。把过去只有管理者才承担的责任和控制权授予员工，能够增强员工的自主性。
+5. 开通反馈渠道。直接的反馈可以让员工了解自己在工作中表现如何，以及自己的工作绩效是否正在改进。
+
+{% asset_img 工作再设计的指导原则.jpeg 工作再设计的指导原则 %}
+
+#### 关于工作设计的两个新兴观点
+1. 关系取向的工作设计观。在今天的工作中，员工与公司同事以及公司内外其他人具有更多的沟通交流和相互依赖。管理者需要研究员工关系的重要因素，例如进入组织的途径、组织对员工社会需求的支持程度、组织外部的互动类型、工作任务的相互依赖程度，以及人际反馈。
+2. 主动的工作涉及观。员工更多地参与对其工作有影响的决策和行动。
 
 ### 公平理论
+
 1. 自己从工作中得到的和付出的进行比较
 2. 自己的付出-所得比与其他相关人员的付出-所得比进行比较
+
 不公平感出现后，员工会试图采取行动来改变它。其结果可能是生产率下降或提高，产品质量下降或提高，更高的缺勤率，或者自愿离职。
+
+管理者应该考虑把报酬分配的决策过程公开化，遵循一致、无偏见的程序，以及采取类似措施，以提高员工的程序公平感。通过增强程序公平感，即使员工对薪水、晋升或其他个人结果感到不满，他们也可能以积极的态度对待上司和组织。
+
 ### 期望理论
+
 期望理论认为，如果个体语气某种行为会带来某种特定的结构，而且该结果对自己具有吸引力，那么该个体往往会采取种种行为。
+
 1. 期望，努力-绩效联系
 2. 手段，绩效-奖励联系
 3. 效价，奖励的吸引力
 
+我必须付出多大努力才能达到某个特定的业绩水平，我确实能够达到这个水平吗？达到这个业绩水平之后我会得到什么奖励？这种奖励对我有多大吸引力，它是否有助于我实现自己的目标？在某个特定时间点上，你是否受到激励去付出努力，取决于你的目标是什么以及这个特定的绩效水平是不是实现你这些目标的必要条件。
+
+管理者必须明白员工为什么认为某些特定的奖励有吸引力或者没有吸引力，我们希望以员工重视的东西来奖励他们。员工是否知道组织对他们的期望是什么以及组织会如何评估他们。期望理论关注人们的感知，真实情况是无关紧要的。个体对工作绩效、奖励和目标的感知（而不是客观情况本身）决定了他的动机（努力程度）。
+
 ## 当代动机理论的整合
-s
-===
-## 参考文献
+
+{% asset_img 当代动机理论的整合.jpeg 当代动机理论的整合 %}
+
+## 当代激励问题
+
+### 在严峻的经济形势下激励员工
+
+随着工作条件的恶化，员工的工作信心、乐观情绪以及工作敬业度也迅速下降。管理者被迫采取一些不涉及金钱或者费用相对低廉的激励措施。
+
+召开员工会议来保持沟通渠道公开并谋求员工对工作事项的投入；设置一个共同目标，以使每个人都专注其中；创造一种社区感，以使员工能够感受到管理者关心他们和他们的工作；向员工提供继续学习和发展的机会。
+
+### 管理跨文化激励
+
+当前大多数的动机理论是由美国人提出来的，而且主要是基于对美国人的研究。这些理论可能隐含着一个最明显的美国化特征：对个人主义和成就的显著强调。
+
+### 激励独特的员工队伍
+
+#### 激励多元化的员工队伍
+对于年轻的员工来说，拥有独立性和体验不同经历的机会是非常重要的，但是，老员工可能会对高度结构化的工作机会更感兴趣。
+
+#### 激励专业人员
+在专业人员中，金钱和晋升通常处于次位。相反，工作的挑战性常常被排在较高的位置。
+
+#### 激励灵活就业员工
+提供成为长期员工的机会。同时，临时员工和长期员工从事同样的工作，长期员工不但工资多而且享受福利待遇，那么临时工的绩效水平会受到影响。因此，让这些员工分开工作，或将他们之间的相互依赖程度降至最低，这样可能会帮助管理者减少潜在的问题。
+
+#### 激励低技能并获得最低工作的员工
+如果负责管理某个全部由缺乏技能且工资最低的工人组成的工作群体。管理者可以利用员工认可计划，以及口头表扬。
+
+### 设计合适的奖励制度
+
+#### 账目公开管理
+通过公开财务报表的方式让员工参与工作决策。使员工更积极地做出有利于工作的决策，更好地理解自己的工作内容和工作方式对公司的意义，最终影响公司利润。
+
+#### 员工认可计划
+对员工的关注以及对出色的工作表现给予关注、赞扬和感谢。
+
+#### 绩效工资方案
+40%的员工看不到绩效和薪酬的联系，公司没有清晰、明确地向员工传达绩效期望。绩效工资方案指的的根据对绩效的测量来支付员工工资的浮动薪酬方案。个体应当能够感觉到自己的绩效与所获得的奖励之间存在一种强有力的纽带，这样才能使激励效果最大化。
