--- a/source/_posts/管理/管理学-激励.md
+++ b/source/_posts/管理/管理学-激励.md
@@ -109,7 +109,7 @@ tags:
 5. 工作反馈。指员工在完成任务的过程中，可以获得关于自己工作绩效的直接而明确的信息的程度。
 
 
-{% asset_img 工作的特征模型.jpeg 工作的特征模型 %}
+{% asset_img 工作的特征模型.jpg 工作的特征模型 %}
 
 #### 工作再设计
 
@@ -119,7 +119,7 @@ tags:
 4. 纵向扩展工作。把过去只有管理者才承担的责任和控制权授予员工，能够增强员工的自主性。
 5. 开通反馈渠道。直接的反馈可以让员工了解自己在工作中表现如何，以及自己的工作绩效是否正在改进。
 
-{% asset_img 工作再设计的指导原则.jpeg 工作再设计的指导原则 %}
+{% asset_img 工作再设计的指导原则.jpg 工作再设计的指导原则 %}
 
 #### 关于工作设计的两个新兴观点
 1. 关系取向的工作设计观。在今天的工作中，员工与公司同事以及公司内外其他人具有更多的沟通交流和相互依赖。管理者需要研究员工关系的重要因素，例如进入组织的途径、组织对员工社会需求的支持程度、组织外部的互动类型、工作任务的相互依赖程度，以及人际反馈。
@@ -148,7 +148,24 @@ tags:
 
 ## 当代动机理论的整合
 
-{% asset_img 当代动机理论的整合.jpeg 当代动机理论的整合 %}
+{% asset_img 当代动机理论的整合.jpg 当代动机理论的整合 %}
+
+目标设置理论：目标-努力链，表明了目标对行为的指导作用
+
+期望理论：期望理论认为，如果个体认为努力与绩效之间，绩效与奖励之间，奖励与个人目标满足之间存在密切联系，他就会努力工作。每种联系之间又受到一些因素的影响
+
+公平理论：个体的绩效水平不仅取决于自己的努力，而且取决于自己完成工作的能力水平，以及组织中有没有一个公正、客观的绩效评估系统
+
+需求理论：当个体由于工作绩效而获得的奖励满足了与其个人目标相一致的主导需求，就会表现出与需求满足程度相对应的工作积极性。
+
+需求理论：高成就需求者受到的激励不是来自组织对他的绩效评估或组织提供的奖励，对他来说，努力与个人目标之间直接相连。只要他们从事的工作能够提供责任感、信息反馈、中等程度的冒险。这些人并不关心努力-绩效，绩效-奖励以及奖励-目标的联系。
+
+强化理论：通过组织提供的奖励对个人绩效的强化而来如果管理者设计的奖励系统在员工看来是致力于奖励出色的工作绩效，那么这种奖励会进一步强化和激励良好的绩效水平。个人经常会将自己的努力与得到的比例与其他相关人员进行比较，若觉得不公平，则会影响个体的努力程度。
+
+工作设计理论：工作设计从两方面影响工作动机
+1.个人绩效。工作本身的特征会激发个体的工作积极性。这些工作增强了努力-绩效之间的联系。
+2.个人目标。增强员工对自己工作中的核心因素的控制。当工作可以提供自主性、信息反馈或类似特征时，将有助于满足该员工的个人目标，因为他们希望对自己的工作拥有更高的控制权
+
 
 ## 当代激励问题
 
