--- a/source/_posts/管理/不懂带人就当不好经理-懂激励.md
+++ b/source/_posts/管理/不懂带人就当不好经理-懂激励.md
@@ -6,7 +6,24 @@ categories:
 tags:
 - 不懂带人就当不好经理
 ---
-给员工以精神上的满足
+## 人性的假设
+
+1. 经济人假设。人是经济的产物，人的一切活动都是为了获得经济报酬和物质生活的满足。X理论。
+2. 社会人假设。人是社会的产物，人在社会主流中追求人际关系的和谐，注重心理和情感的满足，并为此付出个人的努力。
+3. 自我实现人假设。人们力求最大限度地将自己的潜能充分发挥出来，只有在工作中将自己的才能表现出来，人才会感到最大的满足。Y理论。
+4. 复杂人假设。人是很复杂的，人的需要与潜在欲望是多种多样的，而这些需要的内容和结构也不断地随人的年龄和发展阶段的变化而变化，并因人的境遇差异而不同。
+
+## 有效地激励他人
+
+1. 充分肯定下属的出色工作
+2. 让下属承担富有挑战性的工作
+3. 恢复下属的自信心。首先要有一个紧迫的环境，其次要有一个化险为夷，度过危机的结果。
+4. 在工作中多褒少贬。让下属在犯了错误后做了错事之后尽快地了解自己的错误而不是打击他们的自信心，给予他们时间去争取下一步的审理。
+5. 不要无谓地为难你的下属。正确地运用批评的武器也是一种激励手段。
+6. 让你的下属有归属感。一个有着主人翁意识的员工，一定是深爱着自己的工作、自己的部门、自己的公司，对组织有着巨大的献身精神的人。
+
+## 给员工以精神上的满足
+
 1. 倾听式激励
 2. 赞美式激励
 3. 参与式激励
@@ -16,11 +33,44 @@ tags:
 7. 工作轮换式激励
 8. 工作丰富化式激励
 
-最佳激励组合
+## 最佳激励组合
+
 1. 按照工作业绩进行分类激励
 2. 按照个性类型选择合适的激励方法
 
-最佳激励典范
+## 最佳激励典范
+
 1. 按照员工喜欢的方式激励他们
 2. 在公司内实施良性竞争
-3. 不要“只让一人独得”的激励方式
+3. 不要“只让一人独得”的激励方式。不应该鼓励手下员工互相竞争，他不能促进合作，相反却很容易使员工互相保密，拒绝向别人提供帮助。
+
+## 成功激励的28条经验
+
+1. 尝试利用自发的社交和体育活动来激励员工
+2. 利用小组竞争刺激士气
+3. 将管理者的数目减至最低
+4. 确信你给的奖励是锦上添花，而非理所应得的薪资
+5. 询问你的员工，工作中的每一个改变是否有助于激励他们
+6. 尽可能弹性地利用金钱奖励员工，以便激励他们发挥最大的潜能
+7. 尽量让员工知道最新消息，搞不清楚状况只会令员工士气溃散
+8. 花时间去和员工聊天，而不只是和员工道声早安
+9. 对员工有影响的决定，不妨询问他们的意见如何
+10. 小心办公室的政治阴谋，并且以身作则，绝不加入
+11. 尽早提拔有能力、年轻一点的员工
+12. 即使一些目标未达成，也要奖励成效卓越的工作表现
+13. 当你注意到员工的错误时，必须严格且公平，而不是一味地责怪
+14. 给一位在过去一年里一致没有任务的员工分派任务
+15. 告知员工他们的想法被采用了，以及成功率为多少
+16. 考虑所有老资格员工提出的意见
+17. 尽可能给员工创造提意见的机会
+18. 将目标全盘告知员工，可以使他们表现的更好
+19. 初次见到新成员时，要让他们觉得自己很受欢迎
+20. 激励每个人的野心，野心能引导成就
+21. 不要等到年度评鉴时，才和员工讨论他们的表现
+22. 让员工告诉你降低他们工作动机的原因，注意要认真聆听
+23. 不管多么不受欢迎，一定要强调改革会给员工带来利益
+24. 在失去有价值的团队成员前，尽量利用各种方式加以挽留
+25. 提供小型、定期的训练，而非长时间的课程
+26. 旁听训练课程，以确保高质量
+27. 如果有个建议被采纳了，就让提议人来完成这个建议
+28. 利用证书和刻上姓名的礼物，标识员工的成就
