--- a/source/_posts/管理/管理学-激励.md
+++ b/source/_posts/管理/管理学-激励.md
@@ -203,3 +203,14 @@ tags:
 
 #### 绩效工资方案
 40%的员工看不到绩效和薪酬的联系，公司没有清晰、明确地向员工传达绩效期望。绩效工资方案指的的根据对绩效的测量来支付员工工资的浮动薪酬方案。个体应当能够感觉到自己的绩效与所获得的奖励之间存在一种强有力的纽带，这样才能使激励效果最大化。
+
+#### 技能练习
+
+1. 认清个体差异。员工并不完全相同，他们在需求、态度、个性以及其他重要的个人变量方面各不相同。
+2. 让员工与工作相匹配。个体与工作的合理匹配能够起到激励作用，缺乏必要的技能来圆满完成工作任务的员工将会处于劣势。
+3. 利用目标。确保员工拥有困难而具体的目标。
+4. 确保这些目标被员工认为是可实现的。无论目标实际上是否能够实现，如果员工认为无法实现，他们就会降低努力程度。因此，管理者必须保证员工充满自信，让他们感到只要努力就可以实现绩效目标。
+5. 个人化的奖励。对某人有效的奖励并不一定适合其他人，管理者应该充分了解员工的差异并对他们实施个人化的奖励。你能够支配的一些奖励包括加薪、晋升、工作自主性、参与目标设置和决策的机会。
+6. 奖励与绩效挂钩。奖励与绩效紧密联系起来，如果不对绩效因素进行奖励，则只会强化那些非绩效因素。
+7. 检查系统的公平性。员工的经验、能力、努力及其他明显的付出应该能够解释收入、职责以及其他明显结果的差异。
+8. 不要忽视金钱的作用。我们很容易只关注设置目标、创造工作的趣味性、提供参与机会这些因素，而忘记大多数人参与工作的主要原因是为了钱。因此，基于工作绩效的加薪、计件奖金、员工持股计划以及其他收入激励方式对决定员工激励程度具有重要的影响。
