--- a/source/_posts/操作系统/性能之巅-基本概念.md
+++ b/source/_posts/操作系统/性能之巅-基本概念.md
@@ -16,3 +16,69 @@ tags:
 系统性能是一项需要多类人员参与的事务，其中包括系统管理员、技术支持人员、应用开发者、数据库管理员和网络管理员。对于他们的大多数来说，性能是一项兼职的事情，他们可能会有发掘性能的倾向，但仅限于本职工作范围内（网络团队检查网络、数据库团队检查数据库，如此等等）。然而，对于某些性能问题，要找到根本原因还需要这些团队一起协同工作才行。
 
 一些公司会雇佣性能工程师，其主要任务就是维护系统性能。他们与多个团队协同工作，对环境做全局性的研究。
+
+## 事情
+
+## 视角
+
+性能可以从不同的角度来审视。负载分析和资源分析。系统管理员作为系统资源的负责人，通常采用资源分析角度。应用程序开发人员，对最终实现的负载性能负责，通常采用负载缝隙角度。
+
+## 延时
+
+性能分析必须量化问题的重要程度。延时非常适合用来量化性能。
+
+|事件|延时|相对时间比例|
+|-|-|-|
+|1个CPU周期|0.3ns|1s|
+|L1缓存访问|0.9ns|3s|
+|L2缓存访问|2.8ns|9s|
+|L3缓存访问|12.9ns|43s|
+|主存访问（从CPU访问DRAM）|120ns|6分|
+|固态硬盘I/O（闪存）|50-150us|2-6天|
+|旋转磁盘I/O|1-10ms|1-12月|
+|互联网：从旧金山到纽约|40ms|4年|
+|互联网：从旧金山到英国|81ms|8年|
+|互联网：从旧金山到澳大利亚|183ms|19年|
+|TCP包重传|1-3s|105-317年|
+|OS虚拟化系统重启|4s|423年|
+|SCSI命令超时|30s|3千年|
+|硬件虚拟化系统重启|40s|4千年|
+|物理系统重启|5m|32千年|
+
+## 动态跟踪
+
+动态跟踪技术把所有的软件变得可以监控，而且能用在真实的生产环境中。这项技术利用内存中的CPU指令并在这些指令之上动态构建监测数据。
+
+## 指标
+
+- IOPS：每秒的I/O操作数。
+- 吞吐量：每秒数据量或操作量。
+- 使用率：给定的时间区间内资源的繁忙程度，有些组件达到100%后，还是能够正常工作。
+- 饱和度：随着工作量增加而对资源的请求超过资源所能处理的程度，100%后就无法处理，开始排队。
+- 命中率
+
+## 方法
+
+|方法|类型|
+|-|-|
+|街灯讹方法|观测分析|
+|随机变动讹方法|实验分析|
+|责怪他人讹方法|假设分析|
+|Ad Hoc核对清单法|观测与实验分析|
+|问题陈述法|信息收集|
+|科学法|观测分析|
+|诊断循环|生命周期分析|
+|工具法|观测分析|
+|USE方法|观测分析|
+|工作负载特征归纳|观测分析，容量规划|
+|向下挖掘分析|观测分析|
+|延时分析|观测分析|
+|R方法|观测分析|
+|事件跟踪|观测分析|
+|基础线统计|观测分析，容量规划|
+|性能监控|观测分析，容量规划|
+|排队论|统计分析，容量规划|
+|静态性能调整|观测分析，容量规划|
+|缓存调优|观测分析，调优|
+|微基准测试|实验分析|
+|容量规划|容量规划，调优|
