--- a/source/_posts/语言/汇编语言-程序.md
+++ b/source/_posts/语言/汇编语言-程序.md
@@ -21,7 +21,7 @@ codesg ends
 end
 ```
 
-### 可执行程序装入内存并运行的原理
+## 可执行程序装入内存并运行的原理
 在DOS中，可执行文件中的程序P1若要运行，必须要有一个正在运行的程序P2，将P1从可执行文件中加载入内存，将CPU的控制权交给它，P1才能得以运行；当P1运行完毕后，应该将CPU的控制权交还给是它得以运行的程序P2。
 
 1. 我们在DOS中直接执行1.exe时，是正在运行的command，将1.exe中的程序加载入内存。
