--- a/source/_posts/语言/汇编语言-基础知识.md
+++ b/source/_posts/语言/汇编语言-基础知识.md
@@ -21,14 +21,14 @@ tags:
 - 伪指令：没有对应的机器码，由编译器执行，计算机并不执行。
 - 其他符号：如：+、-、*、/等，由编译器识别，没有对应的机器码。
 
-## 寄存器
+# 寄存器
 一个典型的CPU由运算器、控制器、寄存器等器件构成，这些器件靠内部总线相连。
 
 对于一个汇编程序员来说，CPU中的主要部件是寄存器。寄存器是CPU中程序员可以用指令读写的部件。通过改变各种寄存器中的内容来实现对CPU的控制。
 
 不同的CPU，寄存器的个数、结构是不相同的。8086CPU有14个寄存器，每个寄存器有一个名称。8086CPU的所有寄存器都是16位的，可以存放两个字节。这些寄存器是：AX,BX,CX,DX,SI,DI,SP,BP,IP,CS,SS,DS,ES,PSW。
 
-### 通用寄存器
+## 通用寄存器
 AX,BX,CX,DX四个寄存器通常用来存放一般性的数据，被称为通用寄存器。
 
 ```
@@ -36,7 +36,7 @@ mov ax,18
 add ax,8
 mov ax,bx
 ```
-### 段寄存器
+## 段寄存器
 8086CPU有4个段寄存器：CS,DS,SS,ES。
 
 8086CPU在访问内存时要由相关部件提供内存单元的段地址和偏移地址，送入地址加法器合成物理地址。
@@ -45,10 +45,10 @@ mov ax,bx
 # jmp 段地址：偏移地址
 jmp 2AE3:3
 ```
-#### CS和IP
+### CS和IP
 CS和IP指示了CPU当前要读取指令的地址。CS为代码段寄存器，IP为指令指针寄存器。
 
-#### DS
+### DS
 8086CPU中有一个DS寄存器，通常用来存放要访问数据的段地址。
 ```
 mov bx,1000H
@@ -57,19 +57,66 @@ mov al,[0]
 ```
 [0]中的0表示内存单元的偏移地址。内存单元的段地址自动取DS中的数据为内存单元的段地址。同时，不能直接将数据送入段寄存器，必须通过另外一个寄存器来进行中转，例如这里的bx。
 
-#### SS和SP
+### SS和SP
 8086CPU中，有两个寄存器，段寄存器SS和寄存器SP，栈顶的段地址存放在SS中，偏移地址存放在SP中。
 
-### 整理
+### 栈
+
+8086CPU提供相关的指令来以栈的方式访问内存空间。8086CPU提供入栈和出栈指令，最基本的两个是PUSH(入栈)和POP(出栈)。
+有相应的两个寄存器来存放栈顶的地址，段寄存器SS和寄存器SP，栈顶的段地址存放在SS中，偏移地址存放在SP中。
+
+```shell
+push 寄存器：将一个寄存器中的数据入栈
+pop 寄存器:出栈，用一个寄存器接收出栈的数据
+```
+
+> 栈顶超界
+> 8086CPU不保证我们对栈的操作不会超界，因此我们在编程的时候要自己操心栈顶超界的问题。实模式下没有任何保护，虚模式下由操作系统进行保护。
+
+> 实模式：80386处理器被复位或加电的时候以实模式启动，在实模式下，所有的段都是可以读、写和执行的。实模式下处理器没有硬件级的内存保护概念和多道任务的工作模式。
+> 保护模式：又被称作虚拟地址保护模式。保护模式的特性是阻止被其他任务或系统内核破坏已经不健全的程序的运行。
+> 虚模式：虚模式是以任务形式在保护模式上执行的。
+
+## 中断
+
+任何一个通用的CPU，都具备一种能力，可以在执行完当前正在执行的指令之后，检测到从CPU外部发送过来的或内部产生的一种特殊信息（中断信息），并且可以立即对所接收到的信息进行处理。
+
+### 内中断
+
+当CPU内部有下面的情况发生的时候，将产生相应的中断信息：
+
+1. 除法错误
+2. 单步执行
+3. 执行int0指令
+4. 执行int指令
+
+CPU根据中断类型码的数据来标识中断信息的来源。中断类型码为一个字节型数据，可以表示256种中断信息的来源。
+
+|中断源|中断类型码|
+|-|-|
+|除法错误|0|
+|单步执行|1|
+|执行int0指令|4|
+|执行int指令|指令的格式为int n，指令中的n为字节型数字，是提供给CPU的中断类型码|
+
+### 外中断
+
+当CPU外部有需要处理的事情发生的时候，比如说，外设的输入到达，相关芯片将向CPU发出相应的中断信息。CPU在执行完当前指令后，可以检测到发送过来的中断信息，引发中断过程，处理外设的输入。
+
+### 
+## 整理
+
 通过将指令放入CS和IP中，交由CPU执行指令，将数据在AX和BX进行中转，再经DS放回到内存中。
-## Degbug
+
+# Degbug
+
 Debug是DOS、Windows都提供的实模式程序的调试工具。使用它，可以查看CPU各种寄存器中的内容、内存的情况和在机器码级跟踪程序的运行。
 
-### 进入Debug
+## 进入Debug
 
 开始>运行>command>debug
 
-### Debug常用命令
+## Debug常用命令
 
 - R命令：查看、修改CPU中寄存器的值
 - D命令：查看内存中的内容
