--- a/source/_posts/其他/金字塔原理.md
+++ b/source/_posts/其他/金字塔原理.md
@@ -4,20 +4,41 @@ date: 2018-12-30 16:55:58
 categories:
 - 其他
 ---
-<link rel="stylesheet" type="text/css" href="kityminder/kityminder.core.css" />
 
-{% pullquote mindmap %}
-#主题
-##一级分支
-###二级分支
-##一级分支
-##一级分支
-###二级分支
-####三级分支
-{% endpullquote %}
-
-<script src="kityminder/kity.min.js"></script>
-
-<script src="kityminder/kityminder.core.min.js"></script>
-
-<script src="kityminder/mindmap.js"></script>
+{% echarts 400 '81%' %}
+{
+      tooltip: {
+          trigger: 'item',
+          triggerOn: 'mousemove'
+      },
+      series: [
+          {
+              type: 'tree',
+              label: {normal: {position: 'left'}},
+              expandAndCollapse: true,
+              animationDuration: 550,
+              animationDurationUpdate: 750,
+              data: [{
+                name: '金字塔原理',
+                children: [
+                  {
+                    name: '基本原则',
+                    children: [{name: '结论先行'},{name: '以上统下'},{name: '归类分组'},{name: '逻辑递进'}]
+                  },
+                  {
+                    name: '归类分组',
+                    children: [{name: '序言'},{name: '纵向关系'},{name: '横向关系'}]
+                  },
+                  {
+                    name: '同一层次',
+                    children: [
+                      {name: '演绎顺序',children: [{name: '演绎推理'},{name: '归纳推理'}]},
+                      {name: '逻辑顺序',children: [{name: '时间顺序'},{name: '结构顺序'},{name: '程度顺序'}]}
+                    ]
+                  }
+                ]
+              }]
+          }
+      ]
+  };
+{% endecharts %}
