--- a/source/_posts/数据结构与算法/优先队列(堆).md
+++ b/source/_posts/数据结构与算法/优先队列(堆).md
@@ -5,14 +5,14 @@ categories:
 - 数据结构与算法
 tags:
 ---
-####优先队列
+## 优先队列
 在多用户环境中，操作系统调度程序必须决定在若干进程中运行哪个进程。一般说来，短的作业要尽可能快地结束，这一点很重要，因此在已经运行的作业当中这些短作业应该拥有优先权。此外，有些作业虽不短小但很重要，也应该拥有优先权。
 这种特殊的应用似乎需要一类特殊的队列，我们称之为**优先队列**。
 优先队列至少允许下列两种操作，
 1. 插入
 2. 删除最小者：找出、返回并删除优先队列中最小的元素。
 
-####二叉堆
+## 二叉堆
 二叉堆的使用对于优先队列的实现相当普遍。在这里，我们把二叉堆只叫做堆。
 像二叉查找树一样，堆也有两个性质，即结构性和堆序性。对堆的操作可能破坏者两个性质中的一个，因此，堆的操作必须到堆的所有性质都被满足时才能终止。
 1. 结构性质
