--- a/source/_posts/数据结构与算法/预测.md
+++ b/source/_posts/数据结构与算法/预测.md
@@ -5,14 +5,15 @@ categories:
 - 数据结构与算法
 tags:
 ---
-####基于条件期望的预测
+## 基于条件期望的预测
 我们关心的是根据t期观测到的一组变量$X_t$预测变量$Y_{t+1}$。
 令$Y^*_{t+1|t}$表示根据$X_t$作出的对$Y_{t+1}$的预测。为了评价这个预测有用性，我们需要给出一个损失函数来表示当我们的预测偏离一个特定的量时我们的关心程度。通过假定一个二次损失函数，可以得到一个便利的结果。二次损失函数的含义是选择合适的$Y^*_{t+1|t}$，使得
 $$MSE(Y^*_{t+1|t})\equiv E(Y_{t+1} - Y^*_{t+1|t})^2$$
 最小。MSE被称作预测值$Y^*_{t+1|t}$的均方误差。
 可以证明对该均方误差最小时的预测就是$X_t$条件下$Y_{t+1}$的期望，即：
 $$Y^*_{t+1|t} =E(Y_{t+1}|X_t)$$
-####基 于线性投影的预测
+
+## 基 于线性投影的预测
 我们现在将所考察的预测$Y^*_{t+1|t}$限定为$X_t$的线性函数：
 $$Y^*_{t+1|t} = \alpha^,X_t$$
 假定我们求出一个$\alpha$值，使得预测误差($Y_{t+1} - \alpha^,X_t$)与$X_t$无关：
