--- a/source/_posts/机器学习/机器学习-项目.md
+++ b/source/_posts/机器学习/机器学习-项目.md
@@ -80,7 +80,7 @@ conda install jupyter matplotlib numpy pandas scipy scikit-learn
 ```
 ## 创建工作空间
 ```shell
-jupyter notebook
+jupyter notebook --ip=0.0.0.0 --no-browser --allow-root --gateway-url=
 ```
 
 ## 创建测试集
@@ -119,7 +119,7 @@ housing.plot(kind="scatter", x="longitude", y="latitude", alpha=0.1)
 
 >警告：相关系数只测量线性关系（如果 x 上升， y 则上升或下降）。
 >相关系数可能会完全忽略非线性关系（例如，如果 x 接近 0，则 y 值会变高）。
- 
+
 ```python
 corr_matrix = housing.corr()
 corr_matrix["median_house_value"].sort_values(ascending=False)
