--- a/source/_posts/机器学习/机器学习-项目.md
+++ b/source/_posts/机器学习/机器学习-项目.md
@@ -80,7 +80,7 @@ conda install jupyter matplotlib numpy pandas scipy scikit-learn
 ```
 ## 创建工作空间
 ```shell
-jupyter notebook --ip=0.0.0.0 --no-browser --allow-root --gateway-url=
+jupyter notebook --ip=0.0.0.0 --no-browser --allow-root
 ```
 
 ## 创建测试集
